--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 venv
 .idea
+/backend/routes/migrations/0001_initial.py
+/backend/users/migrations/0001_initial.py
+/backend/routes/migrations/0002_comment.py
+/backend/routes/migrations/0003_completedroute.py
+/backend/routes/migrations/__init__.py
+/backend/users/migrations/__init__.py
